# PiMPC.jl

./: .gitignore  LICENSE  Project.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  pytest.yml
examples/: AFTI16_example.jl  afti16_example.py  benchmark_cpu_gpu.py  unicycle_nmpc_example.py
pimpc/: __init__.py  model.py  results.py  solver.py  utils.py
src/: PiMPC.jl  piMPC.jl  problem.jl  solver.jl
test/: runtests.jl
tests/: test_pimpc.py
